remove wrapping divs, fix styles accordingly

--- a/app/client/src/styles/components/channel.less
+++ b/app/client/src/styles/components/channel.less
@@ -1,3 +1,4 @@
 .channel {
+  display: block;
   padding-bottom: 100px;
 }
