--- a/app/client/src/styles/components/message-input.less
+++ b/app/client/src/styles/components/message-input.less
@@ -1,4 +1,5 @@
 .message-input {
+  display: block;
   @padding: 20px;
 
   position: fixed;
